--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
     "build": "webpack --env.local --env.analyze --profile --json > stats.json"
   },
   "dependencies": {
-    "@luma.gl/core": "^7.0.1",
-    "@luma.gl/constants": "^7.0.1",
+    "@loaders.gl/core": "^1.0.3",
+    "@loaders.gl/draco": "^1.0.3",
     "@luma.gl/addons": "^7.0.1",
+    "@luma.gl/constants": "^7.0.1",
+    "@luma.gl/core": "^7.0.1",
     "math.gl": "^2.3.1"
   },
   "devDependencies": {
