--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@luma.gl/addons": "^7.0.1",
     "@luma.gl/constants": "^7.0.1",
     "@luma.gl/core": "^7.0.1",
+    "keycode-js": "^1.0.4",
     "math.gl": "^2.3.1"
   },
   "devDependencies": {
