--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "@luma.gl/constants": "^7.0.1",
     "@luma.gl/core": "^7.0.1",
     "keycode-js": "^1.0.4",
-    "math.gl": "^2.3.1"
+    "math.gl": "^2.3.1",
+    "stats.js": "^0.17.0"
   },
   "devDependencies": {
     "html-webpack-plugin": "^3.2.0",
