--- a/package.json
+++ b/package.json
@@ -5,20 +5,20 @@
     "build": "webpack --env.local --env.analyze --profile --json > stats.json"
   },
   "dependencies": {
-    "@loaders.gl/core": "^1.0.3",
-    "@loaders.gl/draco": "^1.0.3",
-    "@luma.gl/addons": "^7.0.1",
-    "@luma.gl/constants": "^7.0.1",
-    "@luma.gl/core": "^7.0.1",
-    "copy-webpack-plugin": "^5.0.3",
+    "@loaders.gl/core": "1.0.3",
+    "@loaders.gl/draco": "1.0.3",
+    "@luma.gl/addons": "7.0.1",
+    "@luma.gl/constants": "7.0.1",
+    "@luma.gl/core": "7.0.1",
+    "copy-webpack-plugin": "5.0.3",
     "keycode-js": "^1.0.4",
-    "math.gl": "^2.3.1",
+    "math.gl": "2.3.3",
     "stats.js": "^0.17.0"
   },
   "devDependencies": {
     "html-webpack-plugin": "^3.2.0",
-    "webpack": "^4.3.0",
-    "webpack-cli": "^3.3.2",
-    "webpack-dev-server": "^3.1.1"
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.9.0"
   }
 }
